Fix: Adjust background image margin to not cut off navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@ img {
   background-size: cover;
   background-position: center;
   height: 100vh;
-  margin-top: -24px;
+  margin-top: 0px;
   margin-bottom: -50px;
 }
 
@@ -36,8 +36,4 @@ img {
 
 .form-control::placeholder {
   color: #bbb !important;
-}
-
-.nav-link.disabled {
-  pointer-events: none;
 }
